--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
 			<!--=========== ABOUT SECTION ===========-->
 				<section>
 					<div class="bl-box">
-						<h2>Hi My Name is Mike</h2> <!-- class="bl-icon bl-icon-about" -->
+						<h2>Nic Jay Aulston</h2> <!-- class="bl-icon bl-icon-about" -->
 					</div><!-- /bl-box -->
 					<div class="bl-content">
 						<div class="row-fluid">
 							<div class="span12">
 								<h2>A Little About Me</h2>
-								<p>I am a freelance web developer and web designer living in London, UK. I started freelancing in 2009 and have worked for a wide range of personal clients and agencies.</p>
-								<p>I offer a complete web solution to my clients. I can guide you through the early stages of project planning and research, help you with information architecture and user experience, design your website, and finally build the site for you.</p>
+								<p>I am a creator.  I am a thinker.  I change the world.</p>
+								<p>I have taken the past few months on my life to get two important projects off the ground.  A Community Bike Shop in an area that is underserved.</p>
 								<p />
 								<p />
 								<p />
@@ -76,13 +76,13 @@
 										<div class="bar" style="width: 100%;">Web Design 100%</div>
 										</div>  
 										<div class="progress">
-										<div class="bar" style="width: 78%;">Photography 78%</div>
+										<div class="bar" style="width: 78%;">GIS 78%</div>
 										</div>  
 										<div class="progress">
-										<div class="bar" style="width: 80%;">Sound Design 80%</div>
+										<div class="bar" style="width: 80%;">Data Analysis 80%</div>
 										</div>  
 										<div class="progress">
-										<div class="bar" style="width: 63%;">Party 63%</div>
+										<div class="bar" style="width: 63%;">Data Management 63%</div>
 										</div> 
 										<!-- Progress Bar End --> 
 									</div><!-- /span6 -->
@@ -124,12 +124,12 @@
 			<!--=========== PORTFOLIO SECTION ===========-->
 				<section id="bl-work-section">
 					<div class="bl-box">
-						<h2>Latests Works</h2> <!-- class="bl-icon bl-icon-works"-->
+						<h2>Projects</h2> <!-- class="bl-icon bl-icon-works"-->
 					</div>
 					<div class="bl-content">
 						<h2>Some Recent Projects</h2>
-						<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
-						<p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+						<p>These are some recent projects that I have collaborated with other to complete.</p>
+						<p>We used many different tools and techniques to bring information and design to communities that haven't receieved them previously.</p>
 						<p />
 						<p />
 						<div class="row-fluid">
@@ -162,12 +162,12 @@
 			<!--=========== BLOG SECTION ===========-->
 				<section>
 					<div class="bl-box">
-						<h2>My deepest thoughts</h2>
+						<h2>WRITINGS/TEACHINGS (CV)</h2>
 					</div>
 					<div class="bl-content">
 						<div class="row-fluid">
 							<div class="span12">
-								<h2>Latest Blog Entry</h2>
+								<h2>Latest</h2>
 								<article>
 									<h3>Expanding Your Horizons</h3>
 									<img src="images/blogentry.jpg" alt="" />
@@ -200,7 +200,7 @@
 			<!--=========== CONTACT SECTION ===========-->
 				<section>
 					<div class="bl-box">
-						<h2>Contact Me</h2>
+						<h2>SKILLS</h2>
 					</div>
 					<div class="bl-content">
 						<div class="row-fluid">
