--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Transition - vCard Theme</title>
+    <title>Nic Jay Aulston</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
     <meta name="author" content="" />
@@ -99,15 +99,15 @@
 											</div>
 											<div class="span3">
 											<h3><i class="icon-heart icon-white"></i> What I Love</h3>
-											Claritas est etiam processus dynamicus, and mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc. Parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima.
+											Passionate about equality, bicycles, and urban planning that focuses on  healthy places.
 											</div>
 											<div class="span3">
 											<h3><i class="icon-fire icon-white"></i> Work Hard</h3>
-											Claritas est etiam processus dynamicus, and mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc. Parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima.
+											To collaborate and bring enough of the dedicated people to effect the change they believe they want to see.
 											</div>   
 											<div class="span3">
 											<h3><i class="icon-plane icon-white"></i> Ready To Go</h3>
-											Claritas est etiam processus dynamicus, and mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc. Parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima.
+											I am ready to add the necessary skills that will allow me to be effective.
 											</div>   
 										</div><!-- /row-about-us -->  
 									</div><!-- /span12 -->
@@ -151,7 +151,11 @@
 								</ul>
 								<p>Bayview Beacon</p>							
 							</div><!-- /span4 -->
-
+								<div class="span4">
+								<ul id="bl-work-items" style="list-style: none;">
+									<li data-panel="panel-4"><a href="#"><img src="images/OSNIScreen.png" /></a></li>
+								</ul>
+								<p>Oakland Sustainable Neighborhoods Initiative</p>	
 						</div><!-- /row-fluid -->
 					</div><!-- /bl-content -->
 					<span class="bl-icon bl-icon-close"></span>
@@ -294,6 +298,22 @@
 						</div><!-- /row-fluid -->	
 					</div><!-- /panel3 -->
 					
+					<div data-panel="panel-4">
+						<div class="row-fluid">
+							<div class="span8 offset2 tweak">
+							<img src="images/OSNIScreen.png" />
+							<br />
+							
+<style>.embed-container {position: relative; padding-bottom: 80%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><div class="embed-container"><iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="OSNI Parcels" src="http://www.arcgis.com/apps/Embed/index.html?webmap=12adb6cbc863448387e65c059484d505&amp;extent=-122.2943,37.7281,-122.1261,37.8037&amp;zoom=true&amp;scale=true&amp;disable_scroll=true&amp;theme=light"></iframe></div>
+
+							<h4>Project Overview</h4>
+							<p>Updating a site that hasn't been touched for more than five years</p>
+							<h4>Project Details</h4>
+							<p>Making sure information about the important porject is easily available and accessible to teens, parents, and program managers.</p>
+							</div><!-- /span8 -->
+						</div><!-- /row-fluid -->	
+					</div><!-- /panel4 -->
+
 					<nav>
 						<span class="bl-next-work">&gt; Next Project</span>
 						<span class="bl-icon bl-icon-close"></span>
