--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 							<img src="images/OSNIScreen.png" />
 							<br />
 							
-<style>.embed-container {position: relative; padding-bottom: 80%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><div class="embed-container"><iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="OSNI Parcels" src="http://www.arcgis.com/apps/Embed/index.html?webmap=12adb6cbc863448387e65c059484d505&amp;extent=-122.2943,37.7281,-122.1261,37.8037&amp;zoom=true&amp;scale=true&amp;disable_scroll=true&amp;theme=light"></iframe></div>
+<style>.embed-container {position: relative; padding-bottom: 80%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><div class="embed-container"><iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="OSNI Parcels" src="http://www.arcgis.com/apps/SummaryViewer/index.html?appid=1ee0b7e1c6da4c7786e7a3c1ba860b2c"></iframe></div>
 
 							<h4>Project Overview</h4>
 							<p>Updating a site that hasn't been touched for more than five years</p>
