--- a/index.html
+++ b/index.html
@@ -301,15 +301,15 @@
 					<div data-panel="panel-4">
 						<div class="row-fluid">
 							<div class="span8 offset2 tweak">
-							<src="http://www.arcgis.com/apps/SummaryViewer/index.html?appid=1ee0b7e1c6da4c7786e7a3c1ba860b2c" />
+							<img src="images/OSNIscreen.png" />
 							<br />
-							
-<style>.embed-container {position: relative; padding-bottom: 80%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><div class="embed-container"><iframe width="300" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="OSNI Parcels" src="http://www.arcgis.com/apps/SummaryViewer/index.html?appid=1ee0b7e1c6da4c7786e7a3c1ba860b2c"></iframe></div>
-
+<iframe width="100%" height="640px"
+src="http://www.arcgis.com/apps/SummaryViewer/index.html?appid=1ee0b7e1c6da4c7786e7a3c1ba860b2c"
+frameborder="0" scrolling="no"></iframe>
 							<h4>Project Overview</h4>
-							<p>Updating a site that hasn't been touched for more than five years</p>
+							<p>The OSNI BRT Line</p>
 							<h4>Project Details</h4>
-							<p>Making sure information about the important porject is easily available and accessible to teens, parents, and program managers.</p>
+							<p>I built this map To examine the potential impact of the Bus Rapid Transit Line (BRT) in East Oakland, CA.</p>
 							</div><!-- /span8 -->
 						</div><!-- /row-fluid -->	
 					</div><!-- /panel4 -->
