added links and images
changes to projects

--- a/index.html
+++ b/index.html
@@ -151,11 +151,19 @@
 								</ul>
 								<p>Bayview Beacon</p>							
 							</div><!-- /span4 -->
-								<div class="span4">
+								<div class="row-fluid">
+									<div class="span4">
 								<ul id="bl-work-items" style="list-style: none;">
-									<li data-panel="panel-4"><a href="#"><img src="images/OSNIScreen.png" /></a></li>
+									<li data-panel="panel-4"><a href="#"><img src="images/OaklandRingMap.png" /></a></li>
+								</ul>
+								<p>Oakland Ring Map of Social Service Clients</p>	
+								</div><!-- /span4 -->
+									<div class="span4">
+								<ul id="bl-work-items" style="list-style: none;">
+									<li data-panel="panel-5"><a href="#"><img src="images/OSNIscreen.png" /></a></li>
 								</ul>
 								<p>Oakland Sustainable Neighborhoods Initiative</p>	
+
 						</div><!-- /row-fluid -->
 					</div><!-- /bl-content -->
 					<span class="bl-icon bl-icon-close"></span>
@@ -301,6 +309,20 @@
 					<div data-panel="panel-4">
 						<div class="row-fluid">
 							<div class="span8 offset2 tweak">
+							<img src="images/OaklandRingMap.png" />
+							<br />
+<iframe width="100%" height="520" frameborder="0" src="http://www.arcgis.com/apps/PublicInformation/index.html?appid=bfdbd96a560f4aa581966f3af2c42bd4&amp;extent=-122.6215,37.4344,-121.5311,38.1085" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+							<h4>Project Overview</h4>
+							<p>Oakland Ring Map of Social Services</p>
+							<h4>Project Details</h4>
+							<p>A way to clearly show social service clients in the City of Oakland.</p>
+							</div><!-- /span8 -->
+						</div><!-- /row-fluid -->	
+					</div><!-- /panel4 -->
+
+				<div data-panel="panel-5">
+						<div class="row-fluid">
+							<div class="span8 offset2 tweak">
 							<img src="images/OSNIscreen.png" />
 							<br />
 <iframe width="100%" height="640px"
@@ -312,7 +334,7 @@ frameborder="0" scrolling="no"></iframe>
 							<p>I built this map To examine the potential impact of the Bus Rapid Transit Line (BRT) in East Oakland, CA.</p>
 							</div><!-- /span8 -->
 						</div><!-- /row-fluid -->	
-					</div><!-- /panel4 -->
+					</div><!-- /panel5 -->
 
 					<nav>
 						<span class="bl-next-work">&gt; Next Project</span>
