--- a/index.html
+++ b/index.html
@@ -1,14 +1,3 @@
-<!--
- * Transition - vCard Theme
- *
- * Copyright 2013 
- * Licensed under the Apache License v2.0
- * http://www.apache.org/licenses/LICENSE-2.0
- * Created by: Carlos Alvarez
- * URL: http://www.basicoh.com
- * Designed and built based on Twitter Bootstrap.
- * Tags: multipurpose, agency theme, one page, single page, responsive, flat */
---> 
 
 <!DOCTYPE html>
 <html lang="en">
@@ -160,7 +149,7 @@
 								</div><!-- /span4 -->
 									<div class="span4">
 								<ul id="bl-work-items" style="list-style: none;">
-									<li data-panel="panel-5"><a href="#"><img src="images/OSNIscreen.png" /></a></li>
+									<li data-panel="panel-5"><a href="#"><img src="images/OSNIScreen.png" /></a></li>
 								</ul>
 								<p>Oakland Sustainable Neighborhoods Initiative</p>	
 
@@ -297,7 +286,6 @@
 							<div class="span8 offset2 tweak">
 							<img src="images/project3.jpg" />
 							<br />
-							<br />
 							<h4>Project Overview</h4>
 							<p>Updating a site that hasn't been touched for more than five years</p>
 							<h4>Project Details</h4>
@@ -309,9 +297,9 @@
 					<div data-panel="panel-4">
 						<div class="row-fluid">
 							<div class="span8 offset2 tweak">
-							<img src="images/OaklandRingMap.png" />
+							<!--<img src="images/OaklandRingMap.png" />-->
 							<br />
-<iframe width="100%" height="520" frameborder="0" src="http://www.arcgis.com/apps/PublicInformation/index.html?appid=bfdbd96a560f4aa581966f3af2c42bd4&amp;extent=-122.6215,37.4344,-121.5311,38.1085" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+<div><iframe width="100%" height="520" frameborder="0" src="http://www.arcgis.com/apps/PublicInformation/index.html?appid=bfdbd96a560f4aa581966f3af2c42bd4&amp;extent=-122.6215,37.4344,-121.5311,38.1085" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
 							<h4>Project Overview</h4>
 							<p>Oakland Ring Map of Social Services</p>
 							<h4>Project Details</h4>
@@ -323,11 +311,11 @@
 				<div data-panel="panel-5">
 						<div class="row-fluid">
 							<div class="span8 offset2 tweak">
-							<img src="images/OSNIscreen.png" />
+							<!--<img src="images/OSNIscreen.png" />-->
 							<br />
-<iframe width="100%" height="640px"
+<div><iframe width="100%" height="740px"
 src="http://www.arcgis.com/apps/SummaryViewer/index.html?appid=1ee0b7e1c6da4c7786e7a3c1ba860b2c"
-frameborder="0" scrolling="no"></iframe>
+frameborder="0" scrolling="no"></iframe></div>
 							<h4>Project Overview</h4>
 							<p>The OSNI BRT Line</p>
 							<h4>Project Details</h4>
