changes on all parts
for the site

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- Le styles -->
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="css/component.css" rel="stylesheet" />
+	<link href="css/font-awesome.min.css" rel="stylesheet" />
+    
 
     <link href="css/bootstrap-responsive.css" rel="stylesheet" />
 
@@ -34,7 +36,6 @@
 
   <body>
 
-
     <div class="container">
 
 			<div id="bl-main" class="bl-main">
@@ -42,21 +43,104 @@
 			<!--=========== ABOUT SECTION ===========-->
 				<section>
 					<div class="bl-box">
-						<h2>Nic Jay Aulston</h2> <!-- class="bl-icon bl-icon-about" -->
+						<h2>Nic Jay Aulston<br />
+							About Me</h2>
+						<!--<h3>About me</h3>--> <!-- class="bl-icon bl-icon-about" -->
 					</div><!-- /bl-box -->
 					<div class="bl-content">
 						<div class="row-fluid">
 							<div class="span12">
-								<h2>About Me</h2>
+								<header class="section-header">
+                    <h2 class="section-title"><center><span>About Me</span></center></h2>
+                     <div class="spacer"></div>
+								<!--<center><h2>About Me</h2></center>-->
 								<p>I am a creator.  I am a thinker.  I change the world.</p>
 								<p>I have taken the past few months on my life to get two important projects off the ground.  A Community Bike Shop in an area that is underserved.</p>
 								<p />
-								<p />
-								<p />
-								<p />
-								<div class="row-fluid">
+
+ <!-- education begins -->
+     <section id="page-education" class="page-education">
+       <div class="container">
+                <header class="section-header">
+                    <h2 class="section-title"><center><span>Education</span></center></h2>
+                     <div class="spacer"></div>
+                    <p class="section-subtitle">Lorem ipsum dolor sit amet, id iusto oportere mel. </p>
+                </header>
+                <div class="row-fluid">
+                 <div class="left">
+                  <article class="education">
+                    <header>
+                      <h3>University of Michigan</h3>
+                      <p>BA Urban Development and Sociology Social Inequalities Specialization - Graduated: 2002</p>
+                    </header>
+                      <p>Lorem ipsum dolor sit amet, ut pri munere perfecto sadipscing, nam habeo legere disputationi ea. Vis nostrud intellegat eu, in vix erat abhorreant accommodare. Vix id elit albucius suavitate. Eos mentitum forensibus et. Vix et quidam moderatius, cu vim quem tibique constituam.</p>
+                  </article>
+                </div>
+                <div class="right">
+                <article class="education">
+                  <header>
+                    <h3>University of California Los Angeles</h3>
+                    <p>Masters in Urban Planning: Environmental Analysis & Policy Specialization - Graduated: 2011</p>
+                  </header>
+                    <p>Lorem ipsum dolor sit amet, ut pri munere perfecto sadipscing, nam habeo legere disputationi ea. Vis nostrud intellegat eu, in vix erat abhorreant accommodare. Vix id elit albucius suavitate. Eos mentitum forensibus et. Vix et quidam moderatius, cu vim quem tibique constituam.</p>
+                </article>
+                </div>
+            </div>
+       </div>
+    </section>
+    <!-- education ends -->
+
+<!-- experience begins -->
+     <section id="page-experience" class="page-experience">
+       <div class="container">
+                <header class="section-header">
+                    <h2 class="section-title"><center><span>Work Experience</span></center></h2>
+                     <div class="spacer"></div>
+                    <p class="section-subtitle">Lorem ipsum dolor sit amet, id iusto oportere mel. </p>
+                </header>
+                <div class="row-fluid">
+                 <div class="col-md-left">
+                  <article class="experience">
+                    <header>
+                      <h3>Bicis Del Pueblo</h3>
+                      <p>Co-Founder / San Francisco, CA / 2013 - Current</p>
+                    </header>
+                      <p>Programming. Organizational Structure. Social Media. Bike Mechanic. Building a non-profit from the ground up.</p>
+                  </article>
+                </div>
+                  <div class="coll-md-left">
+                  <article class="experience">
+                    <header>
+                      <h3>Urban Strategies Council</h3>
+                       <p>Researcher / San Francisco, CA / 2011 - 2015</p>
+                    </header>
+                      <p>Lorem ipsum dolor sit amet, ut pri munere perfecto sadipscing, nam habeo legere disputationi ea. Vis nostrud intellegat eu, in vix erat abhorreant accommodare. Vix id elit albucius suavitate. Eos mentitum forensibus et. Vix et quidam moderatius, cu vim quem tibique constituam.</p>
+                  </article>
+                </div>
+                <div class="coll-md-left">
+                <article class="experience">
+                  <header>
+                    <h3>Univeristy of California Los Angeles</h3>
+                     <p>Teaching Assistant / Los Angeles, CA / 2009 - 2011</p>
+                  </header>
+                    <p>Curriculm design.</p>
+                </article>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- experience ends -->
+
+<!-- skills begins -->
+     <section id="page-skills" class="page-skills">
+       <div class="container">
+									<header class="section-header">
+                    <h2 class="section-title"><center><span>Current Skills</span></center></h2>
+                     <div class="spacer"></div>
+                    <p class="section-subtitle">List is constantly growing. </p>
+                </header>
+                					<div class="row-fluid">
 									<div class="span8">
-									<h2>My Skills</h2>
 									    <!-- Progress Bar --> 
 										<div class="progress">
 										<div class="bar" style="width: 73%;">HTML/CSS 73%</div>
@@ -75,9 +159,10 @@
 										</div> 
 										<!-- Progress Bar End --> 
 									</div><!-- /span6 -->
+									<!-- experience ends -->
+
 									<div class="span4"></div>
 									<div class="span12">
-										<br />
 										<br />
 									</div>
 									<div class="span12">
@@ -116,7 +201,8 @@
 						<h2>Projects</h2> <!-- class="bl-icon bl-icon-works"-->
 					</div>
 					<div class="bl-content">
-						<h2>Some Recent Projects</h2>
+						<center><h2>Some Recent Projects</h2></center>
+						<div class="spacer"></div>
 						<p>These are some recent projects that I have collaborated with other to complete.</p>
 						<p>We used many different tools and techniques to bring information and design to communities that haven't receieved them previously.</p>
 						<p />
@@ -124,19 +210,19 @@
 						<div class="row-fluid">
 							<div class="span4">
 								<ul id="bl-work-items" style="list-style: none;">
-									<li data-panel="panel-1"><a href="#"><img src="images/project1.jpg" /></a></li>
+									<li data-panel="panel-1"><a href="#"><img src="images/BicisSite.png" /></a></li>
 								</ul>
 								<p>Bicis Del Pueblo</p>							
 							</div><!-- /span4 -->
 							<div class="span4">
 								<ul id="bl-work-items">
-									<li data-panel="panel-2"><a href="#"><img src="images/project2.jpg" /></a></li>
+									<li data-panel="panel-2"><a href="#"><img src="images/MappingSite.png" /></a></li>
 								</ul>
 								<p>Mapping The Bay Area</p>							
 							</div><!-- /span4 -->
 							<div class="span4">
 								<ul id="bl-work-items">
-									<li data-panel="panel-3"><a href="#"><img src="images/project3.jpg" /></a></li>
+									<li data-panel="panel-3"><a href="#"><img src="images/BeaconSite.png" /></a></li>
 								</ul>
 								<p>Bayview Beacon</p>							
 							</div><!-- /span4 -->
@@ -152,7 +238,12 @@
 									<li data-panel="panel-5"><a href="#"><img src="images/OSNIScreen.png" /></a></li>
 								</ul>
 								<p>Oakland Sustainable Neighborhoods Initiative</p>	
-
+								</div><!-- /span4 -->
+									<div class="span4">
+								<ul id="bl-work-items" style="list-style: none;">
+									<li data-panel="panel-5"><a href="#"><img src="images/HipsterSite.png" /></a></li>
+								</ul>
+								<p>Hipster's Unite</p>	
 						</div><!-- /row-fluid -->
 					</div><!-- /bl-content -->
 					<span class="bl-icon bl-icon-close"></span>
@@ -163,7 +254,7 @@
 			<!--=========== BLOG SECTION ===========-->
 				<section>
 					<div class="bl-box">
-						<h2>WRITINGS/TEACHINGS (CV)</h2>
+						<h2>WRITINGS <br />+ <br />TEACHINGS (CV)</h2>
 					</div>
 					<div class="bl-content">
 						<div class="row-fluid">
@@ -199,15 +290,17 @@
 			<!--=========== CONTACT SECTION ===========-->
 				<section>
 					<div class="bl-box">
-						<h2>SKILLS + IMPROVABLES</h2>
+						<h2>SKILLS <br />
+							+ <br />
+							IMPROVABLES</h2>
 					</div>
 					<div class="bl-content">
 						<div class="row-fluid">
 							<div class="span12">
-								<h2>Get in touch</h2>
+								<h2>Skills + Improvables</h2>
 								<br />
-								<p>I believe we all have the ability to acquire skills through trainings.</p>	
-
+								<p>I believe we all have the ability to acquire skills through trainings.</p>
+							</div>
 							<div class="row-fluid">
 									<div class="span8">
 									<h2>My Skills</h2>
@@ -228,7 +321,7 @@
 										<div class="bar" style="width: 63%;">Data Management 63%</div>
 										</div> 
 										<!-- Progress Bar End --> 
-									</div>
+									
 							<p>
 								<p>your at email.com | 415.123.4567 | San Francisco, CA</p>
 							</p>
@@ -256,8 +349,7 @@
 					<div data-panel="panel-1">
 						<div class="row-fluid">
 							<div class="span8 offset2 tweak">
-								<img src="images/project1.jpg" />
-								<br />
+								<img src="images/BicisSite.jpg" />
 								<br />
 								<h4>Project Overview</h4>
 								<p>Bringing Bicycles to an underserved community</p>
@@ -270,8 +362,7 @@
 					<div data-panel="panel-2">
 						<div class="row-fluid">
 							<div class="span8 offset2 tweak">
-							<img src="images/project2.jpg" />
-							<br />
+							<img src="images/MappingSite.png" />
 							<br />
 							<h4>Project Overview</h4>
 							<p>To create a place for cartographers to share thier projects.</p>
@@ -284,7 +375,7 @@
 					<div data-panel="panel-3">
 						<div class="row-fluid">
 							<div class="span8 offset2 tweak">
-							<img src="images/project3.jpg" />
+							<img src="images/BeaconSite.png" />
 							<br />
 							<h4>Project Overview</h4>
 							<p>Updating a site that hasn't been touched for more than five years</p>
