--- a/index.html
+++ b/index.html
@@ -390,9 +390,16 @@ Presented strategic plan on how to leverage private funds, investment and mentor
                 <!--<p>VITA/EITC Tax Prep Sites</p>-->           
               </div><!-- /span4 -->
 
-              <div class="span4">
+<div class="span4">
                 <ul id="bl-work-items">
                   <li data-panel="panel-9" class="item" data-id="id-10" data-tag="map" data-type="map"><a href="#"><img src="images/OaklandLandUse.png" width="281px" height="191px" /><center><p>Oakland Land Use Map</p></center></a></li>
+                </ul>
+                <!--<p>Oakland Land Use Map</p>-->  
+              </div><!-- /span4 -->
+
+<div class="span4">
+                <ul id="bl-work-items">
+                  <li data-panel="panel-10" class="item" data-id="id-10" data-tag="map" data-type="map"><a href="#"><img src="images/Oakland_Impact_Zone_Parcels.jpg" width="281px" height="191px" /><center><p>Potential Crude Oil Spill in the City of Oakland</p></center></a></li>
                 </ul>
                 <!--<p>Oakland Land Use Map</p>-->  
               </div><!-- /span4 -->
@@ -415,12 +422,12 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 
 					<div class="left">
 						<center><h3>Teachings</h3>
-						<a href="#teachings" text="Teachings"><img src="images/collab.jpg" alt="" width="100px" style="margin-BOTTOM: 0px; margin-TOP: 10px" /></center></a>
+						<a href="#teachings" text="Teachings"><img src="images/collab.png" alt="" width="100px" style="margin-BOTTOM: 0px; margin-TOP: 10px" /></center></a>
 					</div>
 
 						<div class="right">
 							<center><h3>Writings</h3>
-						<a href="#writings"><img src="images/written.jpg" alt="" width="200px" style="margin-BOTTOM: 0px; margin-TOP: 10px"/></center></a>
+						<a href="#writings"><img src="images/written.png" alt="" width="200px" style="margin-BOTTOM: 0px; margin-TOP: 10px"/></center></a>
 						</div>
 
 <section id="teachings">
@@ -528,10 +535,14 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 					<div class="row-fluid">
 					<div class="span12">
 
-								<center><h2>Skills + Improvables</h2></center>
+								<center><h2>Skills <br> + <br>Improvables</h2></center>
 								<div class="spacer"></div>
 								<br />
 								<center><p>I believe we all have the ability to acquire skills through trainings.</p></center>
+                <pre>Co-powerment, where people are presented the necessary tools to achieve their potential. -- living to be a billionaire, positively influencing the lives of a billion people.
+                  Meant to be shared
+
+                </pre>
 							</div>
 							<!--<div class="row-fluid">
 									<div class="span8">-->
@@ -575,7 +586,8 @@ Presented strategic plan on how to leverage private funds, investment and mentor
 							Mapping: ArcGIS, QGIS, Google Earth, Google Maps, Leaflet, CartoDB, Mapbox, OpenStreetMap,
 
 Group facilitation:
-						</p>
+						</p><br>
+            <hr>
 
 
 							<!--<div class="span8">-->
@@ -583,11 +595,19 @@ Group facilitation:
 									<div class="spacer"></div>
 									<center><p class="section-subtitle">We all have weaknesses to acknowledge and work to resolve. </p></center>
 
-									<p>Accept my place as a leader and have confidence with my abilities to lead
-									Write, edit, write, edit
-									Clarity of scope of work
-									Taking on too many tasks, knowing my own capacity
-									Art and graphic design</p>
+									<p>
+<img src="images/maslow.png" align="right">
+                  The self help books, programs, public seminars, represent a 10 billion dollar per year industry in the United States alone. We are a nation of people that are constantly attempting improve themselves. Personally, I am working on making my writing and editing skills a daily part of my life and I understand the message from so many, that practice makes perfect.<br>
+
+                  While working on program design, management, and evaluation for the Bicis Del Pueblo project I have learned the need to continually reassess my skills as a leader and manager. One of my main goals is to improve as a manager and insure that the project meets all of its goals.<br>
+
+                  I am taking advantage of some of the numerous resources available to receive Technical professional development in SQL, APIs, and other data management techniques that allow the use of open data. In that same vein I have looked to improve my art and graphic design skills as to best create influential data visualizations.<br>
+
+                  I have been adverse to accepting my place as a leader and have recently found the necessity to enter that space with confidence in my abilities to lead, but still acknowledging my own limitations and limit the number of tasks that I can do well and not all the duties that I am capable of doing.<br>
+
+									<!--Entering into an agreement with the clarity of scope of work-->
+									
+                </p>
 
 
 							<p>
@@ -610,7 +630,7 @@ Group facilitation:
 				
 			<!--=========== PROJECTS DESCRIPTIONS SECTION ===========-->
 				<div class="bl-panel-items" id="bl-panel-work-items">
-					<div data-panel="panel-10">
+					<div data-panel="panel-1">
 						<div class="row-fluid">
 							<div class="span8 offset2 tweak">
 								<img src="images/BicisSite.png" width="100%" height="450px" />
@@ -646,7 +666,7 @@ Group facilitation:
 							<h4>Project Overview</h4>
 							<p>Updating a site that hasn't been touched for more than five years</p>
 							<h4>Project Details</h4>
-							<p>Making sure information about the important project is easily available and accessible to teens, parents, and program managers.</p>
+							<p>Making sure information about important projects is easily available and accessible to teens, parents, and program managers.</p>
 							</div><!-- /span8 -->
 						</div><!-- /row-fluid -->	
 					</div><!-- /panel3 -->
@@ -693,7 +713,7 @@ frameborder="0" scrolling="no"></iframe></div>
 							<h4>Project Details</h4>
 							<p>Individuals and families on governmental assistance attempt to make every dollar that they are allocated stretch to freed clothes, and house their families.
 							<a href="http://calreinvest.org/system/resources/W1siZiIsIjIwMTQvMDMvMjQvMjFfNDJfMTRfODQxXzE5X01pbGxpb2 5fQVRNX0ZlZV9DUkNfUmVwb3J0Xy5wZGYiXV0/19%20Million%20ATM%20Fee%20%28CRC%20Report% 29.pdf">CRC found that $19 million in the State of California of EBT resources was used on ATM fees</a>./<p>  
-							<p>Locally, Alameda County lost $60,000 in CalWorks funds a month ($720,000 in the year) to ATM fees.  These funds could have benefited the local the local business that the clients frequent and not the banking system.
+							<p>Locally, Alameda County lost $60,000 in CalWorks funds a month ($720,000 in the year) to ATM fees. These funds could have benefited the local the local business that the clients frequent and not the banking system.
 								<a href="hhttps://www.academia.edu/19591994/Electronic_Benefits_Transfer_Service_Charges_in_Alameda_County_California_A_Geographic_Analysis_of_the_Inequitable_Service_Charges">Read Full Report</a></p>
 							</div><!-- /span8 -->
 						</div><!-- /row-fluid -->	
@@ -722,7 +742,7 @@ frameborder="0" scrolling="no"></iframe></div>
 							<h4>Project Overview</h4>
 							<p>VITA/EITC Tax Preparation Sites</p>
 							<h4>Project Details</h4>
-							<p>The costs associated with private income tax preparation site render them inaccessible to low-income individuals and families.  We designed a map that allows users in the City of Oakland to see the locations of where they can get their taxes prepared for free. The map was also developed to for ease to be embedded in website of any partnering organizations.<a href="http://www.arcgis.com/apps/LocalPerspective/index.html?appid=17c9230c6e5043b5b63f275324636e7c">See Full Map</a></p>
+							<p>The costs associated with private income tax preparation site render them inaccessible to low-income individuals and families. We designed a map that allows users in the City of Oakland to see the locations of where they can get their taxes prepared for free. The map was also developed to for ease to be embedded in website of any partnering organizations.<a href="http://www.arcgis.com/apps/LocalPerspective/index.html?appid=17c9230c6e5043b5b63f275324636e7c">See Full Map</a></p>
 							</div><!-- /span8 -->
 						</div><!-- /row-fluid -->	
 					</div><!-- /panel8 -->
@@ -738,7 +758,7 @@ frameborder="0" scrolling="no"></iframe></div>
               <h4>Project Overview</h4>
               <p>Oakland Land Use by City Council District</p>
               <h4>Project Details</h4>
-              <p>City Council District representatives serve the residents in a specific geographic area.  These geographies are drawn with different motivations, but the elected officials still have the responsibility to have the best interests of their constituents in mind in their decision making process.  The interactive Oakland Land Use Map provides a tool for politicians, governmental agencies, and the public to examine the concentrations of land use types through the city.  The map presents a count of parcels that have been assigned for the different types of land uses; Commercial, Exempt, Industrial, Institutional, Residential, Unknown, and Vacant parcels.  Each district was ranked by the count and area dedicated to each land use type.  A user can see the number of parcels for each use type at different zoom levels on the map.  This map is a powerful tool and was designed for ease of use and understanding.<a href="http://www.arcgis.com/apps/SummaryViewer/index.html?appid=3544382ab4ce4153b32a5b7cc8c43943">See Full Map</a></p>
+              <p>City Council District representatives serve the residents in a specific geographic area.  These geographies are drawn with different motivations, but the elected officials still have the responsibility to have the best interests of their constituents in mind in their decision making process. The interactive Oakland Land Use Map provides a tool for politicians, governmental agencies, and the public to examine the concentrations of land use types through the city.  The map presents a count of parcels that have been assigned for the different types of land uses; Commercial, Exempt, Industrial, Institutional, Residential, Unknown, and Vacant parcels. Each district was ranked by the count and area dedicated to each land use type. A user can see the number of parcels for each use type at different zoom levels on the map. This map is a powerful tool and was designed for ease of use and understanding.<a href="http://www.arcgis.com/apps/SummaryViewer/index.html?appid=3544382ab4ce4153b32a5b7cc8c43943">See Full Map</a></p>
               </div><!-- /span8 -->
             </div><!-- /row-fluid --> 
           </div><!-- /panel9 -->
@@ -748,11 +768,12 @@ frameborder="0" scrolling="no"></iframe></div>
               <div class="span8 offset2 tweak">
               <!--<img src="images/VITASite.png" />-->
               <!--<br />-->
-<div><iframe width="100%" height="75%" frameborder="0" src="http://www.mappingthebayarea.com" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
+<div><iframe width="100%" height="75%" frameborder="0" src="images/Oakland_Impact_Zone_Parcels.jpg" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
               <h4>Project Overview</h4>
-              <p>Oakland Land Use by City Council District</p>
+              <p>Potential Oil Spill Site in the City of Oakland</p>
               <h4>Project Details</h4>
-              <p>City Council District representatives serve the residents in a specific geographic area.  These geographies are drawn with different motivations, but the elected officials still have the responsibility to have the best interests of their constituents in mind in their decision making process.  The interactive Oakland Land Use Map provides a tool for politicians, governmental agencies, and the public to examine the concentrations of land use types through the city.  The map presents a count of parcels that have been assigned for the different types of land uses; Commercial, Exempt, Industrial, Institutional, Residential, Unknown, and Vacant parcels.  Each district was ranked by the count and area dedicated to each land use type.  A user can see the number of parcels for each use type at different zoom levels on the map.  This map is a powerful tool and was designed for ease of use and understanding.<a href="http://www.mappingthebayarea.com">See Full Site</a></p>
+              <p>There is a current blind spot in the environmental justice movement.  Even though it ensuring that all people in the USA enjoy the same degree of protection from both environmental and health hazards no matter what community they live, learn, worship, and work in is a cornerstone of the US Environmental Protection Agency (EPA), they have failed to respond to the major emerging environmental hazard of crude oil spills due to train derailment. <br> We analyzed the potential impact of a derailment of a train transporting oil in the City of Oakland, California. This project was designed to provide a clear impression to the governing bodies responsible for ensuring environmental justice, US EPA, California Environmental Potential Agency and local jurisdictional bodies, of the potential disaster in the City of Oakland.<br> We have created two maps that demonstrate the potential impact of the derailment of a train carrying oil through the City of Oakland California. The first map shows the areas that are vulnerable for the entire city, while the second map lays out a scenario of a theoretical derailment site.
+.<a href="https://www.academia.edu/s/5dcb6c396a?source=link">See Full DRAFT Report </a></p>
               </div><!-- /span8 -->
             </div><!-- /row-fluid --> 
           </div><!-- /panel10 -->
