add bike project
added one more project to the site

--- a/index.html
+++ b/index.html
@@ -404,6 +404,13 @@ Presented strategic plan on how to leverage private funds, investment and mentor
                 <!--<p>Oakland Land Use Map</p>-->  
               </div><!-- /span4 -->
 
+<div class="span4">
+                <ul id="bl-work-items">
+                  <li data-panel="panel-11" class="item" data-id="id-10" data-tag="map" data-type="map"><a href="#"><img src="images/SF_Bike_Infrastructure5.jpg" width="281px" height="191px" /><center><p>San Francisco Bicycle Infrastructure: Is it Equitably Distributed?</p></center></a></li>
+                </ul>
+                <!--<p>Oakland Land Use Map</p>-->  
+              </div><!-- /span4 -->
+
             </div><!-- /row-fluid -->
           </div><!-- /bl-content -->
           <span class="bl-icon bl-icon-close"></span>
@@ -747,8 +754,6 @@ frameborder="0" scrolling="no"></iframe></div>
 						</div><!-- /row-fluid -->	
 					</div><!-- /panel8 -->
 
-
-
 <div data-panel="panel-9">
             <div class="row-fluid">
               <div class="span8 offset2 tweak">
@@ -777,6 +782,24 @@ frameborder="0" scrolling="no"></iframe></div>
               </div><!-- /span8 -->
             </div><!-- /row-fluid --> 
           </div><!-- /panel10 -->
+
+          <div data-panel="panel-11">
+            <div class="row-fluid">
+              <div class="span8 offset2 tweak">
+              <!--<img src="images/VITASite.png" />-->
+              <!--<br />-->
+<div><iframe width="100%" height="75%" frameborder="0" src="images/SF_Bike_Infrastructure5.jpg" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe></div>
+              <h4>Project Overview</h4>
+              <p>Disparities in the Current San Francisco Bicycle Infrastructure</p>
+              <h4>Project Details</h4>
+              <p>Bicycling is an inexpensive mode of transportation, however in a biking mecca like San Francisco the question arises if the bike resources are equalitably distributed throughout the city.  <br>  Bicis Del Pueblo, a bike start-up co-operative bike shop based in the Excelsior neighborhood, views the inability to address the biking issues in District 11 and the Excelsior neighborhood as evidence they have not been committed to building transportation equity.  Bicis Del Pueblo will demonstrate, through the most current available data, how the City government has ignored the communities we serve as they allocate financial and material investments for bike infrastructure throughout the City.<br>
+              The data shows the City has yet to make an equitable investment in District 11 or the Excelsior neighborhood as it pertains to bike parking, racks, lanes, paths, routes, share stations, and other infrastructure projects.  Even as the entire City has been categorized by Bike Score as very bikeable, with many areas as a biker’s paradise, our service area have a substantially lower score because of the lack of existing infrastructure.  This decision by the City to exclude our communities has an impact on the specific people living in our service area.
+.<a href="https://www.academia.edu/18944953">See Full DRAFT Report </a></p>
+              </div><!-- /span8 -->
+            </div><!-- /row-fluid --> 
+          </div><!-- /panel11 -->
+
+
 
 					<nav>
 						<span class="bl-next-work">&gt; Next Project</span>
